simpler toList()